# wasmcon-workshop

./: Dockerfile  Makefile  README.md  put-creds.sh  wadm.yaml
.devcontainer/: README.md  devcontainer.json
hello-cosmo-go/: Justfile  README.md  go.mod  http.go  kv.go  main.go  wasi_snapshot_preview1.command.wasm  wasmcloud.toml
hello-cosmo-go/ui/: index.html
hello-cosmo-go/ui/static/css/: main.702da5e8.css
hello-cosmo-go/ui/static/js/: 27.e71807d8.chunk.js  787.d97a38b0.chunk.js.map  main.84e37f6d.js.map
hello-cosmo-go/wit/: deps.toml  hello_cosmo.wit
hello-cosmo-go/wit/overrides/io/: streams.wit
hello-cosmo-rust/: Cargo.toml  Justfile  wasmcloud.toml
hello-cosmo-rust/src/: http_helper.rs  kv.rs  lib.rs  ui.rs
hello-cosmo-rust/ui/: asset-manifest.json  index.html
hello-cosmo-rust/ui/static/css/: main.39705c79.css  main.39705c79.css.map
hello-cosmo-rust/ui/static/js/: 787.d97a38b0.chunk.js  main.84e37f6d.js  main.ae363411.js
hello-cosmo-rust/wit/: deps.toml
ui/: package.json
