[package]
name = "hello-cosmo-rust"
version = "0.1.0"
edition = "2021"
authors = ["wasmcloud Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
http = "0.2.9"
mime_guess = "2.0.4"
rust-embed = "8.0.0"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = { version = "1.0.105" }
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.11.0" }

[build-dependencies]
anyhow = "1.0.75"
